--- a/subconverter/eva.ini
+++ b/subconverter/eva.ini
@@ -26,5 +26,5 @@ custom_proxy_group=JP-BGP`url-test`(日本 BGP)`http://www.gstatic.com/generate_
 custom_proxy_group=US-BGP`url-test`(美国 BGP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=TW-BGP`url-test`(台湾 BGP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=HK-BGP`url-test`(香港 BGP)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=HK-AGA`url-test`(香港 AGA)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=HK-AGA`url-test`(香港 AGA|香港 CEN+)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=IEPL`url-test`(香港 IEPL)`http://www.gstatic.com/generate_204`300
