--- a/subconverter/eva.ini
+++ b/subconverter/eva.ini
@@ -18,7 +18,7 @@ custom_proxy_group=ZOOM`select`[]PATH`[]IEPL`[]HK-AGA`[]HK-BGP`[]TW-BGP`[]US-BGP
 custom_proxy_group=Microsoft`select`[]PATH`[]IEPL`[]HK-AGA`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT
 custom_proxy_group=Telegram`select`[]PATH`[]IEPL`[]HK-AGA`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT
 custom_proxy_group=Others`select`[]PATH`[]IEPL`[]HK-AGA`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT`.*
-custom_proxy_group=PATH`fallback`[]IEPL`[]HK-AGA`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT`.*`http://www.gstatic.com/generate_204`300
+custom_proxy_group=PATH`fallback`[]IEPL`[]HK-AGA`[]HK-BGP`[]TW-BGP`http://www.gstatic.com/generate_204`300
 custom_proxy_group=GIA`select`(GIA)`http://204.ustclug.org/generate_204`300
 custom_proxy_group=DE-BGP`url-test`(德国 BGP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=GB-BGP`url-test`(英国 BGP)`http://www.gstatic.com/generate_204`300
