--- a/subconverter/clash-cfw.ini
+++ b/subconverter/clash-cfw.ini
@@ -13,7 +13,7 @@ surge_ruleset=Others,[]FINAL
 
 custom_proxy_group=Apple`select`[]DIRECT`[]IEPL`[]HK-AGA`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA
 custom_proxy_group=BQTY`select`[]DIRECT`[]IEPL`[]HK-AGA`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA
-custom_proxy_group=China`select`[]DIRECT`[]IEPL`[]HK-AGA`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`([^(IEPL)(BGP)(AGA)(CEN)])
+custom_proxy_group=China`select`[]DIRECT`.*
 custom_proxy_group=Steam`select`[]PATH`[]IEPL`[]HK-AGA`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`(俄)`[]DIRECT
 custom_proxy_group=ZOOM`select`[]PATH`[]IEPL`[]HK-AGA`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT
 custom_proxy_group=Microsoft`select`[]PATH`[]IEPL`[]HK-AGA`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT
