--- a/subconverter/quanx-cfw.ini
+++ b/subconverter/quanx-cfw.ini
@@ -1,22 +1,17 @@
-  
 surge_ruleset=EVA-01,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/EVA-01_RuleSet_Integrated.list,3600
 surge_ruleset=DIRECT,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Direct_RuleSet_Integrated.list,3600
 surge_ruleset=Microsoft,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Microsoft_RuleSet_Integrated.list,3600
 surge_ruleset=BQTY,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/BQTY_RuleSet_Integrated.list,3600
-surge_ruleset=Apple,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Apple_RuleSet_Integrated.list,3600
 surge_ruleset=China,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/China_RuleSet_Integrated.list,3600
 surge_ruleset=Steam,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Steam_RuleSet_Integrated.list,3600
-surge_ruleset=ZOOM,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/ZOOM_RuleSet_Integrated.list,3600
 surge_ruleset=Telegram,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Telegram_RuleSet_Integrated.list,3600
 surge_ruleset=China,[]GEOIP,CN
 surge_ruleset=Others,[]FINAL
 
 
-custom_proxy_group=Apple`select`[]DIRECT`[]IEPL`[]HK-AGA`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA
-custom_proxy_group=BQTY`select`[]DIRECT`[]IEPL`[]HK-AGA`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA
+custom_proxy_group=BQTY`select`[]DIRECT`[]IEPL`[]HK-AGA`[]HK-BGP`[]TW-BGP
 custom_proxy_group=China`select`[]DIRECT`.*
-custom_proxy_group=Steam`select`[]PATH`[]IEPL`[]HK-AGA`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`(俄)`[]DIRECT
-custom_proxy_group=ZOOM`select`[]PATH`[]IEPL`[]HK-AGA`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT
+custom_proxy_group=Steam`select`[]PATH`[]IEPL`[]HK-AGA`[]HK-BGP`(俄)`[]DIRECT
 custom_proxy_group=Microsoft`select`[]PATH`[]IEPL`[]HK-AGA`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT
 custom_proxy_group=Telegram`select`[]PATH`[]IEPL`[]HK-AGA`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT
 custom_proxy_group=Others`select`[]PATH`[]IEPL`[]HK-AGA`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT`.*
