--- a/subconverter/quanx-cfw.ini
+++ b/subconverter/quanx-cfw.ini
@@ -4,6 +4,7 @@ surge_ruleset=Microsoft,https://raw.githubusercontent.com/kkAtGithub/rule_integr
 surge_ruleset=BQTY,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/BQTY_RuleSet_Integrated.list,3600
 surge_ruleset=China,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/China_RuleSet_Integrated.list,3600
 surge_ruleset=Steam,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Steam_RuleSet_Integrated.list,3600
+surge_ruleset=Scholar,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Scholar_RuleSet_Integrated.list,3600
 surge_ruleset=Telegram,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Telegram_RuleSet_Integrated.list,3600
 surge_ruleset=China,[]GEOIP,CN
 surge_ruleset=Others,[]FINAL
@@ -12,6 +13,7 @@ surge_ruleset=Others,[]FINAL
 custom_proxy_group=BQTY`select`[]DIRECT`[]IEPL`[]IPLC`[]HK-BGP`[]TW-BGP
 custom_proxy_group=China`select`[]DIRECT`.*
 custom_proxy_group=Steam`select`[]PATH`[]IEPL`[]IPLC`[]HK-BGP`(俄)`[]DIRECT
+custom_proxy_group=Scholar`select`[]PATH`[]IEPL`[]IPLC`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT`.*
 custom_proxy_group=Microsoft`select`[]PATH`[]IEPL`[]IPLC`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT
 custom_proxy_group=Telegram`select`[]PATH`[]IEPL`[]IPLC`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT
 custom_proxy_group=Others`select`[]PATH`[]IEPL`[]IPLC`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT`.*
