--- a/subconverter/cfw.ini
+++ b/subconverter/cfw.ini
@@ -25,6 +25,6 @@ custom_proxy_group=JP-BGP`url-test`(日本 BGP)`http://www.gstatic.com/generate_
 custom_proxy_group=US-BGP`url-test`(美国 BGP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=TW-BGP`url-test`(台湾 BGP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=HK-BGP`url-test`(香港 BGP)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=IPLC`url-test`(香港 AGA|香港 CEN|香港 IPLC)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=IPLC`url-test`(香港 IPLC)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=IEPL`url-test`(香港 IEPL)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=EVA-01`select`[]DIRECT`(EVA 01)
