--- a/subconverter/cfw.ini
+++ b/subconverter/cfw.ini
@@ -17,7 +17,7 @@ custom_proxy_group=Scholar`select`[]PATH`[]IEPL`[]IPLC`[]HK-BGP`[]TW-BGP`[]US-BG
 custom_proxy_group=Telegram`select`[]PATH`[]IEPL`[]IPLC`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT
 custom_proxy_group=Microsoft`select`[]PATH`[]IEPL`[]IPLC`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT
 custom_proxy_group=Others`select`[]PATH`[]IEPL`[]IPLC`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT`.*
-custom_proxy_group=PATH`select`[]IEPL`[]IPLC`[]HK-BGP`[]TW-BGP
+custom_proxy_group=PATH`select`[]IEPL`[]IPLC`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT
 custom_proxy_group=GIA`select`(GIA)`http://204.ustclug.org/generate_204`300
 custom_proxy_group=DE-BGP`url-test`(德国 BGP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=GB-BGP`url-test`(英国 BGP)`http://www.gstatic.com/generate_204`300
