--- a/subconverter/cfw.ini
+++ b/subconverter/cfw.ini
@@ -21,9 +21,9 @@ custom_proxy_group=PATH`select`[]IEPL`[]IPLC`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP
 custom_proxy_group=GIA`select`(GIA)`http://204.ustclug.org/generate_204`300
 custom_proxy_group=DE-BGP`url-test`(德国 BGP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=GB-BGP`url-test`(英国 BGP)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=JP-BGP`url-test`(日本 BGP)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=US-BGP`url-test`(美国 BGP)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=TW-BGP`url-test`(台湾 BGP)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=JP-BGP`url-test`(日本 BGP|日本 IEPL)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=US-BGP`url-test`(美国 BGP|美国 IEPL)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=TW-BGP`url-test`(台湾 BGP|台湾 IEPL)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=HK-BGP`url-test`(香港 BGP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=IPLC`url-test`(香港 IPLC)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=IEPL`url-test`(香港 IEPL)`http://www.gstatic.com/generate_204`300
