--- a/subconverter/cfw.ini
+++ b/subconverter/cfw.ini
@@ -1,11 +1,11 @@
-surge_ruleset=EVA-01,https://cdn.jsdelivr.net/gh/kkAtGithub/rule_integration@main/results/rules/EVA-01_RuleSet_Integrated.list,3600
-surge_ruleset=DIRECT,https://cdn.jsdelivr.net/gh/kkAtGithub/rule_integration@main/results/rules/Direct_RuleSet_Integrated.list,3600
-surge_ruleset=BQTY,https://cdn.jsdelivr.net/gh/kkAtGithub/rule_integration@main/results/rules/BQTY_RuleSet_Integrated.list,3600
-surge_ruleset=China,https://cdn.jsdelivr.net/gh/kkAtGithub/rule_integration@main/results/rules/China_RuleSet_Integrated.list,3600
-surge_ruleset=Steam,https://cdn.jsdelivr.net/gh/kkAtGithub/rule_integration@main/results/rules/Steam_RuleSet_Integrated.list,3600
-surge_ruleset=Scholar,https://cdn.jsdelivr.net/gh/kkAtGithub/rule_integration@main/results/rules/Scholar_RuleSet_Integrated.list,3600
-surge_ruleset=Telegram,https://cdn.jsdelivr.net/gh/kkAtGithub/rule_integration@main/results/rules/Telegram_RuleSet_Integrated.list,3600
-surge_ruleset=Microsoft,https://cdn.jsdelivr.net/gh/kkAtGithub/rule_integration@main/results/rules/Microsoft_RuleSet_Integrated.list,3600
+surge_ruleset=EVA-01,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/EVA-01_RuleSet_Integrated.list,3600
+surge_ruleset=DIRECT,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Direct_RuleSet_Integrated.list,3600
+surge_ruleset=BQTY,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/BQTY_RuleSet_Integrated.list,3600
+surge_ruleset=China,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/China_RuleSet_Integrated.list,3600
+surge_ruleset=Steam,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Steam_RuleSet_Integrated.list,3600
+surge_ruleset=Scholar,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Scholar_RuleSet_Integrated.list,3600
+surge_ruleset=Telegram,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Telegram_RuleSet_Integrated.list,3600
+surge_ruleset=Microsoft,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Microsoft_RuleSet_Integrated.list,3600
 surge_ruleset=China,[]GEOIP,CN
 surge_ruleset=Others,[]FINAL
 
