--- a/subconverter/cfw.ini
+++ b/subconverter/cfw.ini
@@ -5,7 +5,7 @@ surge_ruleset=China,https://raw.githubusercontent.com/kkAtGithub/rule_integratio
 surge_ruleset=Steam,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Steam_RuleSet_Integrated.list,3600
 surge_ruleset=Scholar,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Scholar_RuleSet_Integrated.list,3600
 surge_ruleset=Telegram,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Telegram_RuleSet_Integrated.list,3600
-surge_ruleset=Microsoft,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Microsoft_RuleSet_Integrated.list,3600
+; surge_ruleset=Microsoft,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Microsoft_RuleSet_Integrated.list,3600
 surge_ruleset=China,[]GEOIP,CN
 surge_ruleset=Others,[]FINAL
 
@@ -15,7 +15,7 @@ custom_proxy_group=China`select`[]DIRECT`(GIA|AGA)`http://204.ustclug.org/genera
 custom_proxy_group=Steam`select`[]PATH`[]IEPL`[]HK-BGP`(俄)`[]DIRECT
 custom_proxy_group=Scholar`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT`.*
 custom_proxy_group=Telegram`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT
-custom_proxy_group=Microsoft`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT
+; custom_proxy_group=Microsoft`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT
 custom_proxy_group=Others`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT`.*
 custom_proxy_group=PATH`select`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT
 custom_proxy_group=GIA`select`(GIA)`http://204.ustclug.org/generate_204`300
