--- a/subconverter/btc.ini
+++ b/subconverter/btc.ini
@@ -1,28 +1,23 @@
-surge_ruleset=EVA-01,https://cdn.jsdelivr.net/gh/kkAtGithub/rule_integration@main/results/rules/EVA-01_RuleSet_Integrated.list,3600
-surge_ruleset=DIRECT,https://cdn.jsdelivr.net/gh/kkAtGithub/rule_integration@main/results/rules/Direct_RuleSet_Integrated.list,3600
-surge_ruleset=Microsoft,https://cdn.jsdelivr.net/gh/kkAtGithub/rule_integration@main/results/rules/Microsoft_RuleSet_Integrated.list,3600
-surge_ruleset=BQTY,https://cdn.jsdelivr.net/gh/kkAtGithub/rule_integration@main/results/rules/BQTY_RuleSet_Integrated.list,3600
-surge_ruleset=Apple,https://cdn.jsdelivr.net/gh/kkAtGithub/rule_integration@main/results/rules/Apple_RuleSet_Integrated.list,3600
-surge_ruleset=China,https://cdn.jsdelivr.net/gh/kkAtGithub/rule_integration@main/results/rules/China_RuleSet_Integrated.list,3600
-surge_ruleset=Steam,https://cdn.jsdelivr.net/gh/kkAtGithub/rule_integration@main/results/rules/Steam_RuleSet_Integrated.list,3600
-surge_ruleset=ZOOM,https://cdn.jsdelivr.net/gh/kkAtGithub/rule_integration@main/results/rules/ZOOM_RuleSet_Integrated.list,3600
-surge_ruleset=Telegram,https://cdn.jsdelivr.net/gh/kkAtGithub/rule_integration@main/results/rules/Telegram_RuleSet_Integrated.list,3600
+surge_ruleset=EVA-01,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/EVA-01_RuleSet_Integrated.list,3600
+surge_ruleset=DIRECT,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Direct_RuleSet_Integrated.list,3600
+surge_ruleset=BQTY,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/BQTY_RuleSet_Integrated.list,3600
+surge_ruleset=China,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/China_RuleSet_Integrated.list,3600
+surge_ruleset=Steam,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Steam_RuleSet_Integrated.list,3600
+surge_ruleset=Scholar,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Scholar_RuleSet_Integrated.list,3600
+surge_ruleset=Telegram,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Telegram_RuleSet_Integrated.list,3600
 surge_ruleset=China,[]GEOIP,CN
 surge_ruleset=Others,[]FINAL
 
 
-custom_proxy_group=Apple`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
-custom_proxy_group=BQTY`select`[]🇭🇰 HK`[]🇨🇳 TW`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA`[]DIRECT`(EVA)
-custom_proxy_group=China`select`[]🇭🇰 HK`[]🇨🇳 TW`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA`[]DIRECT`(EVA)
-custom_proxy_group=Steam`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
-custom_proxy_group=ZOOM`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
-custom_proxy_group=Microsoft`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
-custom_proxy_group=Telegram`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
-custom_proxy_group=Others`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
-custom_proxy_group=PATH`select`[]DIRECT`[]GIA`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP
+custom_proxy_group=BQTY`select`[]🇭🇰 HK`[]🇲🇴 MO`[]🇨🇳 TW`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA`[]DIRECT`(EVA)
+custom_proxy_group=China`select`[]🇭🇰 HK`[]🇲🇴 MO`[]🇨🇳 TW`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA`[]DIRECT`(EVA)
+custom_proxy_group=Steam`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇲🇴 MO`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
+custom_proxy_group=Telegram`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇲🇴 MO`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
+custom_proxy_group=Others`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇲🇴 MO`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
+custom_proxy_group=PATH`select`[]DIRECT`[]GIA`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇲🇴 MO`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP
 custom_proxy_group=GIA`select`(GIA)`http://204.ustclug.org/generate_204`300
 custom_proxy_group=EVA-01`select`(EVA 01)`DIRECT
-custom_proxy_group=🇮🇪 IE`url-test`(爱尔兰)`http://204.ustclug.org/generate_204`300
+custom_proxy_group=🇲🇴 MO`url-test`(澳门)`http://204.ustclug.org/generate_204`300
 custom_proxy_group=🇩🇪 DE`url-test`(德国)`http://204.ustclug.org/generate_204`300
 custom_proxy_group=🇬🇧 UK`url-test`(英国)`http://204.ustclug.org/generate_204`300
 custom_proxy_group=🇷🇺 RU`url-test`(俄罗斯)`http://204.ustclug.org/generate_204`300
@@ -32,4 +27,3 @@ custom_proxy_group=🇸🇬 SG`url-test`(新加坡)`http://204.ustclug.org/gener
 custom_proxy_group=🇺🇸 US`url-test`(美国)`http://204.ustclug.org/generate_204`300
 custom_proxy_group=🇰🇷 KR`url-test`(韩国)`http://204.ustclug.org/generate_204`300
 custom_proxy_group=🇯🇵 JP`url-test`(日本)`http://204.ustclug.org/generate_204`300
-
