--- a/subconverter/cfw.ini
+++ b/subconverter/cfw.ini
@@ -10,20 +10,20 @@ surge_ruleset=China,[]GEOIP,CN
 surge_ruleset=Others,[]FINAL
 
 
-custom_proxy_group=BQTY`select`[]DIRECT`[]IEPL`[]HK-BGP`[]TW-BGP
+custom_proxy_group=BQTY`select`[]DIRECT`[]HK-IEPL`[]HK-AIA`[]TW-AIA
 custom_proxy_group=China`select`[]DIRECT`.*
-custom_proxy_group=Steam`select`[]PATH`[]IEPL`[]HK-BGP`(俄)`[]DIRECT
-custom_proxy_group=Scholar`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT`.*
-custom_proxy_group=Telegram`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT
-custom_proxy_group=Microsoft`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT
-custom_proxy_group=Others`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT`.*
-custom_proxy_group=PATH`select`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT
+custom_proxy_group=Steam`select`[]PATH`[]HK-IEPL`[]HK-AIA`(俄)`[]DIRECT
+custom_proxy_group=Scholar`select`[]PATH`[]HK-IEPL`[]HK-AIA`[]TW-AIA`[]US-AIA`[]JP-AIA`[]GB-AIA`[]DE-AIA`[]GIA`[]DIRECT`.*
+custom_proxy_group=Telegram`select`[]PATH`[]HK-IEPL`[]HK-AIA`[]TW-AIA`[]US-AIA`[]JP-AIA`[]GB-AIA`[]DE-AIA`[]GIA`[]DIRECT
+custom_proxy_group=Microsoft`select`[]PATH`[]HK-IEPL`[]HK-AIA`[]TW-AIA`[]US-AIA`[]JP-AIA`[]GB-AIA`[]DE-AIA`[]GIA`[]DIRECT
+custom_proxy_group=Others`select`[]PATH`[]HK-IEPL`[]HK-AIA`[]TW-AIA`[]US-AIA`[]JP-AIA`[]GB-AIA`[]DE-AIA`[]GIA`[]DIRECT`.*
+custom_proxy_group=PATH`select`[]HK-IEPL`[]HK-AIA`[]TW-AIA`[]US-AIA`[]JP-AIA`[]GB-AIA`[]DE-AIA`[]GIA`[]DIRECT
 custom_proxy_group=GIA`select`(GIA)`http://204.ustclug.org/generate_204`300
-custom_proxy_group=DE-BGP`url-test`(德国 BGP)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=GB-BGP`url-test`(英国 BGP)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=JP-BGP`url-test`(日本 BGP|日本 IEPL)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=US-BGP`url-test`(美国 BGP|美国 IEPL)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=TW-BGP`url-test`(台湾 BGP|台湾 IEPL)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=HK-BGP`url-test`(香港 BGP)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=IEPL`url-test`(香港 IEPL)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=DE-AIA`url-test`(德国 AIA)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=GB-AIA`url-test`(英国 AIA)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=JP-AIA`url-test`(日本 AIA)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=US-AIA`url-test`(美国 AIA)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=TW-AIA`url-test`(台湾 AIA)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=HK-AIA`url-test`(香港 AIA)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=HK-IEPL`url-test`(香港 IEPL)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=EVA-01`select`[]DIRECT`(EVA 01)
